# crewaimeat

./: .env.example  .gitignore  .pre-commit-config.yaml  AIMEAT_FIXES.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CREW_AUTHORING_PROMPT.md  LICENSE  README.md  SCAFFOLD_CANON.md  collab_smoke_test.py  laimeat-sanomat.html  llm_providers.example.json  pyproject.toml  run_workflow_demo.py  startup.prompt.md  try_liaison.py
.claude/agents/: convention-reviewer.md  fleet-doctor.md
.claude/skills/aimeat-sync/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.github/workflows/: ci.yml  release-agency.yml
aimeat-agency/: .gitignore  README.md  package.json  pnpm-lock.yaml
aimeat-agency/src/: index.html
aimeat-agency/src-tauri/: Cargo.toml  tauri.conf.json
aimeat-agency/src-tauri/capabilities/: default.json
aimeat-agency/src-tauri/icons/: icon.icns
aimeat-agency/src-tauri/src/: main.rs
benchmarks/: __init__.py
benchmarks/locomo/: README.md  __init__.py  dataset.py  harness.py  metrics.py
crew_defs/: exchange_buyer.json  exchange_composer.json  joker.json
crew_defs/templates/: research_assistant.json
crews/: _aimeat_app_builder_crew.py  _aimeat_app_designer_crew.py  _aimeat_cortex_fixer_crew.py  _aimeat_realtime_presence_board_builder_crew.py  _guardrails.py  activity_reporter_crew.py  aimeat_app_builder_crew.py  aimeat_app_conductor_crew.py  aimeat_app_designer_crew.py  aimeat_app_editor_crew.py  aimeat_app_specs_designer_crew.py  aimeat_cortex_fixer_crew.py  aimeat_crew_forge_crew.py  aimeat_extension_builder_crew.py  aimeat_realtime_builder_crew.py  aimeat_realtime_presence_board_builder_crew.py  aimeat_sdlc_architect_crew.py  cadence_followup_crew.py  concierge_crew.py  crew_forge_crew.py  daily_brief_crew.py  daily_briefing_crew_crew.py  daily_features_writer_crew.py  editorial_writer_crew.py  exchange_buyer_crew.py  exchange_composer_crew.py  feedback_wisdom_crew.py  finnish_corporate_researcher_crew.py  form_filler_crew.py  founder_lens_crew.py  idea_feasibility_rater_crew.py  image_maker_crew.py  image_scout_crew.py  jingle_writer_crew.py  joker_crew.py  joker_v2_crew.py  librarian_crew.py  mroom_archivist_crew.py  mroom_curator_crew.py  mroom_digger_crew.py  (+21 more)
docs/: 2026-05-29-crewai-task-runner-and-multi-agent-serve.md  aimeat-app-authoring-guide.md  aimeat-integration.md  cancellation-proposal.md  dynamic-coordination-2026-05-31.md  librarian-design.md  reliability-stack.md
docs/aimeat-node-requests/: resumable-workflow-engine.md
docs/tasks/: declarative-crewspec.md
examples/agent_bundled_app/: README.md  notes_summarizer_app.json
examples/aimeat/: demo-crew.config.yaml  marketing-crew.config.yaml
infra/searxng/: docker-compose.yml
infra/searxng/searxng/: settings.yml
scripts/: _fix_chat.py  _smoke_template.py  _test_chat_interaction.py  backfill_sanomat_memory.py  check_feeds.py  check_models.py  dm_inbound_test.py  dm_listener.py  ec-image-prompts-3.txt  ec-image-prompts-4.txt  ec-image-prompts-5.txt  ec-image-prompts-6.txt  ec-image-prompts-7.txt  ec-image-prompts-tours2.txt  ec-image-prompts.txt  ec_image_gen.py  ensure_serve.py  eval_crew_forge.py  install-autostart.ps1  lingua_image_gen.py  register_fleet.py  run_locomo.py  serve_watchdog.ps1  serve_watchdog.sh  start_fleet.ps1  start_fleet.sh  start_host.ps1  terminate_fleet.ps1  terminate_fleet.sh  test_one_model.py  view_fleet.ps1  view_fleet.sh  watchdog.ps1  watchdog.sh
skills/: README.md
skills/comedy-set-craft/: SKILL.md
skills/sanomat-editorial-style/: SKILL.md
src/crewaimeat/: __init__.py  _extract_worker.py  _home.py  _validate_crew.py  activity_contract.py  aimeat_crew.py  app_deploy.py  app_verify.py  app_verify_tools.py  article_extract.py  author_tool.py  brain_json.py  brain_templates.py  brains.py  browser_tool.py  cadence_contract.py  company_contract.py  contract_adopt.py  corrections.py  crew.py  crew_def.py  crew_registry.py  crewai_cost_patch.py  ddg_search.py  discover.py  dm.py  editorial_pipeline.py  embedder_cascade.py  engagements.py  evolve.py  evolve_run.py  exchange_tools.py  features_pipeline.py  feed_sources.py  feedback_wisdom_contract.py  fetch_pipeline.py  fleet_host.py  fleet_identity.py  forge.py  forge_catalog.py  (+49 more)
src/crewaimeat/agency/: __init__.py  account.py  advisor.py  app_builder.py  app_prompt.py  apps.py  chat_store.py  cockpit.py  events.py  fleet_ops.py  journey.py
src/crewaimeat/agency/app_templates/: dashboard.html  public_viewer.html
src/crewaimeat/agency/static/: index.html
src/crewaimeat/examples/: __init__.py  competitive_intel_crew.py  content_crew.py  data_insights_crew.py  marketing_crew.py  support_crew.py
src/crewaimeat/templates/: __init__.py  example_crew.py
src/crewaimeat/tui/: __init__.py  actions.py  agent_meta.py  app.py  fleet_state.py  i18n.py  render.py  test_run.py  versions.py
src/crewfive/: __init__.py  aimeat.py  aimeat_crew.py  crew.py  demo.py  llm.py  main.py  progress.py  research_crew.py  runner.py  scaffold.py
src/crewfive/config/: agents.yaml  tasks.yaml
src/crewfive/examples/: __init__.py  competitive_intel_crew.py  content_crew.py  data_insights_crew.py  marketing_crew.py  support_crew.py
src/crewfive/templates/: __init__.py  example_crew.py
tests/: README.md  conftest.py  crew_fixtures.py  test_agency_copilot.py  test_app_deploy.py  test_brain_json.py  test_brains.py  test_build_domain.py  test_cadence_followups.py  test_chat_commands.py  test_cockpit.py  test_concierge.py  test_corrections.py  test_crew_def.py  test_crew_registry.py  test_discover.py  test_dm.py  test_embedder_cascade.py  test_events.py  test_exchange_tools.py  test_feedback_wisdom_routed.py  test_finalize_todos.py  test_fleet_identity.py  test_fleet_ops.py  test_fleet_state.py  test_forge_catalog.py  test_forge_eval.py  test_forge_json.py  test_forge_memory.py  test_forge_precedent.py  test_forge_stop.py  test_form_filler.py  test_guardrails.py  test_hitl.py  test_legal_screen.py  test_llm_chain.py  test_local_marks.py  test_local_memory.py  test_locomo_harness.py  test_mail_dedup.py  (+27 more)
(+2 files in other folders)
