[project]
name = "crewaimeat"
version = "0.2.0"
description = "AIMEAT × CrewAI integration: a validated crew template (liaison + daemon + live progress + date injection) for connecting CrewAI crews to AIMEAT.io, with example crews."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.6",
    "aimeat-crewai>=0.5.0",  # 0.5.0: native offers + workflow-compat (Sig, build_offer/publish_offers,
    #                          aimeat-offers CLI, CrewAI tools, liaison); 0.4.0 connector forward tunnel
    "tavily-python>=0.5.0",  # optional Tavily fallback (USE_TAVILY=1); default web search is SearXNG
    "requests>=2.31",        # SearXNG web-search tool + REST helpers + qwen-vl vision (browser screenshots)
    "playwright>=1.44",      # web-tester browser tool (plan-then-execute); needs `uv run playwright install chromium`
    "python-dotenv>=1.0.1",
    "tzdata",  # zoneinfo tz database (needed on Windows for current-time injection)
    "pyfiglet>=1.0.0",  # deterministic ASCII-art for [[FIGLET]] README directives
    "trafilatura>=2.0.0",
    "litellm>=1.87.1",
    "feedparser>=6.0.12",
]

[project.scripts]
crewaimeat = "crewaimeat.scaffold:main"
research-crew = "crewaimeat.research_crew:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewaimeat"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
# The L1/L2 test floor: deterministic, no LLM, no network. See docs/aimeat-guides/nextgeneration/
# 10-testing-and-evaluation-plan.md. pythonpath lets tests import crews.<x> and the shared fixtures.
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "tests"]
filterwarnings = ["ignore::DeprecationWarning"]
