[project]
name = "crewaimeat"
version = "0.4.0"
description = "AIMEAT × CrewAI integration: a validated crew template (liaison + daemon + live progress + date injection) for connecting CrewAI crews to AIMEAT.io, with example crews."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.7",  # 1.14.7: per-run state isolation (concurrent daemons), custom-BaseLLM
    #                           restore fix, aiohttp/docling CVE fixes, faster import
    "aimeat-crewai>=0.8.1",  # 0.8.1: fix the DM/record wake-consume (the idle wake long-poll now RETURNS the popped event to on_dm/on_record instead of discarding it); 0.8.0: federated-inbox DM trigger (listen_for="dms" + on_dm, drains /local/dm/next; needs AIMEAT node>=1.30.2); 0.7.1: daemon re-lists tasks only on a push wake (kills the idle tunnel re-list storm) + task.cancelled push; 0.7.0: event push over the tunnel (listen_for="records" + record_spaces + on_record, auth_revoked self-exit, aimeat_agent_statistics tool)
    #                          + aimeat_crewai.paths.aimeat_home single source; 0.5.0: native offers +
    #                          workflow-compat (Sig, build_offer/publish_offers, aimeat-offers CLI, liaison)
    "tavily-python>=0.5.0",  # optional Tavily fallback (USE_TAVILY=1); default web search is SearXNG/DDG
    "ddgs>=6.0",             # free DuckDuckGo web search — zero-infra fallback when no SearXNG is running
    "requests>=2.31",        # SearXNG web-search tool + REST helpers + qwen-vl vision (browser screenshots)
    "playwright>=1.44",      # web-tester browser tool (plan-then-execute); needs `uv run playwright install chromium`
    "python-dotenv>=1.0.1",
    "tzdata",  # zoneinfo tz database (needed on Windows for current-time injection)
    "pyfiglet>=1.0.0",  # deterministic ASCII-art for [[FIGLET]] README directives
    "trafilatura>=2.0.0",
    "litellm>=1.87.1",
    "feedparser>=6.0.12",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]  # the fleet TUI (crewaimeat-tui); optional so the core install stays lean

[project.scripts]
crewaimeat = "crewaimeat.scaffold:main"
crewaimeat-tui = "crewaimeat.tui.app:main"
research-crew = "crewaimeat.research_crew:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewaimeat"]

[dependency-groups]
dev = ["pytest>=8.0", "textual>=0.60", "ruff>=0.6", "pre-commit>=3.5"]  # textual: TUI tests; ruff: lint+format; pre-commit: git hooks

[tool.ruff]
# Match the existing house style (wide lines, py310 floor). Generated/vendored trees are excluded.
line-length = 120
target-version = "py310"
extend-exclude = [".venv", ".aimeat", "logs", "docs"]

[tool.ruff.lint]
# A pragmatic, low-noise starter set: pyflakes (F) + pycodestyle (E/W) + import sorting (I) +
# pyupgrade (UP) + bugbear (B) + comprehensions (C4) + a few simplifications (SIM). Tighten over time.
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # line length is enforced by the formatter, not the linter (avoids churn on long comments)
    "B008",    # CrewAI/Typer patterns call functions in argument defaults by design
    "SIM105",  # `contextlib.suppress` over try/except-pass — the explicit form reads clearer here
    # House idioms kept after the initial Ruff adoption — tighten later if desired:
    "E741",    # short names (l/I/O) appear in a few tight comprehensions/loops
    "SIM115",  # `open(p).read()` one-liners are the established pattern for tiny config reads
    "C408",    # `dict(...)` calls are used deliberately for kwargs-style construction
    "W291",    # trailing whitespace inside multi-line string literals (intentional spacing)
    "B905",    # `zip()` without strict= — the lengths are known-equal at the call sites
    "SIM118",  # `key in dict.keys()` reads clearer in the one spot it occurs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]   # tests set up sys.path / env before importing the package under test
"crews/*" = ["E402"]   # a few crews import lazily inside build_domain after a guard

[tool.pytest.ini_options]
# The L1/L2 test floor: deterministic, no LLM, no network. See docs/aimeat-guides/nextgeneration/
# 10-testing-and-evaluation-plan.md. pythonpath lets tests import crews.<x> and the shared fixtures.
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "tests"]
filterwarnings = ["ignore::DeprecationWarning"]
